# japanese-lyric-learner

./: .gitignore  LICENSE  README.md  main.ipynb  main.py  main_parallel.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
original_song/: dryflower.txt  test.txt
output/: dryflower_analysis.md  dryflower_analysis.txt
output/to_learn/: test_analysis.txt
