[project]
name = "japanese-lyric-learner"
version = "0.1.0"
description = "Japanese Lyric Learner - Analyze Japanese song lyrics with AI translations and explanations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.1.0",
    "python-dotenv>=1.1.1",
    "httpx>=0.27.0",
    "pydantic>=2.10.3",
    "tqdm>=4.67.1",
]
